--- a/backend/sample-api/package.json
+++ b/backend/sample-api/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "postgres": "^3.4.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
