--- a/expense-t/expense-api/package.json
+++ b/expense-t/expense-api/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "nanoid": "3",
     "postgres": "^3.4.3"
   },
   "devDependencies": {
