--- a/expense-t/expense-tracker/package.json
+++ b/expense-t/expense-tracker/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icon-picker": "^1.0.0",
     "react-icons": "^5.0.1",
     "react-select": "^5.8.0"
   },
